/** Modelo Sequelize: notificación en bandeja de un usuario. */
import { DataTypes } from "sequelize";
import { sequelize } from "../database/connection.js";
import { Users } from "./Users.js";

export const Notifications = sequelize.define(
  "notifications",
  {
    id: {
      type: DataTypes.INTEGER,
      autoIncrement: true,
      primaryKey: true,
    },
    userId: {
      type: DataTypes.INTEGER,
      allowNull: false,
    },
    type: {
      type: DataTypes.ENUM("info", "alert", "reminder", "message"),
      defaultValue: "info",
    },
    title: {
      type: DataTypes.STRING(255),
      allowNull: true,
    },
    message: {
      type: DataTypes.TEXT,
      allowNull: true,
    },
    link: {
      type: DataTypes.STRING(255),
      allowNull: true,
    },
    deleted: {
      type: DataTypes.BOOLEAN,
      defaultValue: false,
    },
    seen: {
      type: DataTypes.BOOLEAN,
      defaultValue: false,
    },
    createdAt: {
      type: DataTypes.DATE,
      defaultValue: DataTypes.NOW,
    },
  },
  {
    updatedAt: false,
  }
);

Users.hasMany(Notifications, {
  foreignKey: "userId",
  sourceKey: "id",
  onDelete: "CASCADE",
});
Notifications.belongsTo(Users, {
  foreignKey: "userId",
  targetKey: "id",
});
